@@ -18,7 +18,6 @@ package org.jlinalg.polynomial;
 
 import java.util.HashMap;
 import java.util.Map;
-import java.util.Random;
 
 import org.jlinalg.IRingElement;
 import org.jlinalg.IRingElementFactory;
@@ -31,17 +30,18 @@ import org.jlinalg.RingElementFactory;
  * sub-type of {@link IRingElement}, that is the constructors of single elements
  * have to be provided with a factory of this type.
  * <P>
- * Note: if the factory of the base type is not a singelton factory, it must
+ * Note: if the factory of the base type is not a singleton factory, it must
  * implement {@code java.lang.Object.equal(Object o)} such that if the base type
  * are considered equal, the factories are equal.
  * 
- * @author Georg THimm
+ * @author Georg Thimm
  * @param <BASE>
  *            the type for the elements in the polynomial
  */
 @JLinAlgTypeProperties(isCompound = true)
 public class PolynomialFactory<BASE extends IRingElement<BASE>>
-		extends RingElementFactory<Polynomial<BASE>>
+		extends
+		RingElementFactory<Polynomial<BASE>>
 {
 
 	private static final long serialVersionUID = 1L;
@@ -71,18 +71,12 @@ public class PolynomialFactory<BASE extends IRingElement<BASE>>
 	 * @param baseFactory
 	 * @return a factory for polynomials.
 	 */
-	@SuppressWarnings("unchecked")
 	public static <RE extends IRingElement<RE>> PolynomialFactory<RE> getFactory(
 			IRingElementFactory<RE> baseFactory)
 	{
-		PolynomialFactory<RE> factory = (PolynomialFactory<RE>) PolynomialFactoryMap.INSTANCE
-				.get(baseFactory);
-		if (factory == null) {
-			factory = new PolynomialFactory<RE>(baseFactory);
-			PolynomialFactoryMap.INSTANCE.put(
-					(IRingElementFactory) baseFactory,
-					(PolynomialFactory) factory);
-		}
+		PolynomialFactory<RE> factory = PolynomialFactoryMap
+				.getFactory(baseFactory);
+
 		return factory;
 	}
 
@@ -95,25 +89,18 @@ public class PolynomialFactory<BASE extends IRingElement<BASE>>
 	 *                if it is attempted to create another factory for the same
 	 *                base type.
 	 */
-	@SuppressWarnings({
-			"boxing", "unchecked"
-	})
-	private PolynomialFactory(IRingElementFactory<BASE> baseFactory)
+	PolynomialFactory(IRingElementFactory<BASE> baseFactory)
 	{
 		super();
-		if (PolynomialFactoryMap.INSTANCE.containsKey(baseFactory))
-			throw new InternalError("Try to recreate the same factory again.");
-		BASEFACTORY = baseFactory;
-		PolynomialFactoryMap.INSTANCE.put((IRingElementFactory) BASEFACTORY,
-				(PolynomialFactory) this);
+		this.baseFactory = baseFactory;
 
-		Map<Integer, BASE> coefficientForZero = new HashMap<Integer, BASE>();
-		coefficientForZero.put(0, baseFactory.zero());
-		ZERO = new Polynomial<BASE>(coefficientForZero, baseFactory);
-		Map<Integer, BASE> coefficientForOne = new HashMap<Integer, BASE>();
-		coefficientForOne.put(0, baseFactory.one());
-		ONE = new Polynomial<BASE>(coefficientForOne, baseFactory);
-		M_ONE = ONE.negate();
+		Map<Integer, BASE> coefficients = new HashMap<>();
+		coefficients.put(0, baseFactory.zero());
+		ZERO = new Polynomial<>(coefficients, baseFactory);
+		coefficients.put(0, baseFactory.one());
+		ONE = new Polynomial<>(coefficients, baseFactory);
+		coefficients.put(0, baseFactory.m_one());
+		M_ONE = new Polynomial<>(coefficients, baseFactory);
 	}
 
 	@SuppressWarnings("unchecked")
@@ -122,15 +109,21 @@ public class PolynomialFactory<BASE extends IRingElement<BASE>>
 	{
 		if (this == obj) return true;
 		if (!(obj instanceof PolynomialFactory)) return false;
-		return BASEFACTORY.equals(((PolynomialFactory<BASE>) obj)
-				.getBaseFactory());
+		return baseFactory
+				.equals(((PolynomialFactory<BASE>) obj).getBaseFactory());
+	}
+
+	@Override
+	public int hashCode()
+	{
+		return baseFactory.hashCode();
 	}
 
 	/**
 	 * the factory for the base element of the type of polynomials this factory
 	 * produces.
 	 */
-	final IRingElementFactory<BASE> BASEFACTORY;
+	private final IRingElementFactory<BASE> baseFactory;
 
 	/**
 	 * The getter for the factory for the base element of the type of
@@ -140,7 +133,7 @@ public class PolynomialFactory<BASE extends IRingElement<BASE>>
 	 */
 	public IRingElementFactory<BASE> getBaseFactory()
 	{
-		return BASEFACTORY;
+		return baseFactory;
 	}
 
 	@SuppressWarnings("unchecked")
@@ -169,22 +162,8 @@ public class PolynomialFactory<BASE extends IRingElement<BASE>>
 	}
 
 	/**
-	 * @throws InvalidOperationException
-	 *             if called.
-	 */
-	@SuppressWarnings("deprecation")
-	@Override
-	@Deprecated
-	public Polynomial<BASE> gaussianRandomValue(
-			@SuppressWarnings("unused") Random random)
-	{
-		throw new InvalidOperationException("Cannot create random polynomials.");
-	}
-
-	/**
-	 * Create a polynomial from a {@link Map}<Integer,? extends
-	 * {@link IRingElement}> or an instance of {@link IRingElement}. <BR>
-	 * Preferred method: {@link #get(Map, IRingElementFactory)}
+	 * Create a polynomial from a {@link Map}&lt;Integer,? extends
+	 * {@link IRingElement}&gt; or an instance of {@link IRingElement}.
 	 * 
 	 * @param o
 	 *            an object which can be translated into a coefficient for this
@@ -192,15 +171,16 @@ public class PolynomialFactory<BASE extends IRingElement<BASE>>
 	 * @return a polynomial consisting of a single constant: the value of
 	 *         <code>o</code>
 	 */
+	@SuppressWarnings("unchecked")
 	@Override
 	public Polynomial<BASE> get(Object o)
 	{
 		// create a polynomial consisting of a single constant.
 		if (o instanceof IRingElement<?>) {
 			BASE e = (BASE) o;
-			Map<Integer, BASE> coefficientForOne = new HashMap<Integer, BASE>();
-			coefficientForOne.put(new Integer(0), e);
-			return new Polynomial<BASE>(coefficientForOne, e.getFactory());
+			Map<Integer, BASE> coefficientForOne = new HashMap<>();
+			coefficientForOne.put(Integer.valueOf(0), e);
+			return new Polynomial<>(coefficientForOne, e.getFactory());
 		}
 
 		if (o instanceof Map<?, ?>) {
@@ -210,14 +190,14 @@ public class PolynomialFactory<BASE extends IRingElement<BASE>>
 			}
 			BASE baseElement = (BASE) ((Map<?, ?>) o).values().toArray()[0];
 
-			return new Polynomial<BASE>((Map<Integer, BASE>) o,
+			return new Polynomial<>((Map<Integer, BASE>) o,
 					baseElement.getFactory());
 		}
-		return get(BASEFACTORY.get(o));
+		return get(baseFactory.get(o));
 	}
 
 	/**
-	 * Create a polynomial from a map with coefficients and a basefactory
+	 * Create a polynomial from a map with coefficients and a base factory
 	 * 
 	 * @param coefficients
 	 * @param basefactory
@@ -226,19 +206,19 @@ public class PolynomialFactory<BASE extends IRingElement<BASE>>
 	public Polynomial<BASE> get(Map<Integer, BASE> coefficients,
 			IRingElementFactory<BASE> basefactory)
 	{
-		return new Polynomial<BASE>(coefficients, basefactory);
+		return new Polynomial<>(coefficients, basefactory);
 	}
 
 	@Override
 	public Polynomial<BASE> get(int i)
 	{
-		return get(BASEFACTORY.get(i));
+		return get(baseFactory.get(i));
 	}
 
 	@Override
 	public Polynomial<BASE> get(double d)
 	{
-		return get(BASEFACTORY.get(d));
+		return get(baseFactory.get(d));
 	}
 
 	@SuppressWarnings("unchecked")
@@ -249,39 +229,12 @@ public class PolynomialFactory<BASE extends IRingElement<BASE>>
 	}
 
 	/**
-	 * @throws InvalidOperationException
-	 *             if called.
-	 */
-	@SuppressWarnings("deprecation")
-	@Override
-	@Deprecated
-	public Polynomial<BASE> randomValue(
-			@SuppressWarnings("unused") final Random random)
-	{
-		throw new InvalidOperationException("Cannot create random polynomials.");
-	}
-
-	/**
 	 * @see org.jlinalg.IRingElementFactory#get(long)
 	 */
 	@Override
 	public Polynomial<BASE> get(long d)
 	{
-		return get(BASEFACTORY.get(d));
-	}
-
-	/**
-	 * @throws InvalidOperationException
-	 */
-	@SuppressWarnings("deprecation")
-	@Deprecated
-	@Override
-	public Polynomial<BASE> randomValue(
-			@SuppressWarnings("unused") Random random,
-			@SuppressWarnings("unused") Polynomial<BASE> min,
-			@SuppressWarnings("unused") Polynomial<BASE> max)
-	{
-		throw new InvalidOperationException("Cannot create random polynomials.");
+		return get(baseFactory.get(d));
 	}
 
 	/**
@@ -292,7 +245,8 @@ public class PolynomialFactory<BASE extends IRingElement<BASE>>
 	@Deprecated
 	public Polynomial<BASE> gaussianRandomValue()
 	{
-		throw new InvalidOperationException("Cannot create random polynomials.");
+		throw new InvalidOperationException(
+				"Cannot create random polynomials.");
 	}
 
 	/**
@@ -305,7 +259,8 @@ public class PolynomialFactory<BASE extends IRingElement<BASE>>
 			@SuppressWarnings("unused") Polynomial<BASE> min,
 			@SuppressWarnings("unused") Polynomial<BASE> max)
 	{
-		throw new InvalidOperationException("Cannot create random polynomials.");
+		throw new InvalidOperationException(
+				"Cannot create random polynomials.");
 	}
 
 	/**
@@ -316,7 +271,8 @@ public class PolynomialFactory<BASE extends IRingElement<BASE>>
 	@Deprecated
 	public Polynomial<BASE> randomValue()
 	{
-		throw new InvalidOperationException("Cannot create random polynomials.");
+		throw new InvalidOperationException(
+				"Cannot create random polynomials.");
 	}
 
 	/**
@@ -329,4 +285,5 @@ public class PolynomialFactory<BASE extends IRingElement<BASE>>
 		return "Factory: " + getClass().getName() + "[" + getBaseFactory()
 				+ "]";
 	}
+
 }
