@@ -17,18 +17,13 @@
 package org.jlinalg.rational;
 
 import java.math.BigInteger;
-import java.util.Random;
-import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
 import org.jlinalg.DivisionByZeroException;
 import org.jlinalg.FieldElement;
 import org.jlinalg.IRingElementFactory;
-import org.jlinalg.InvalidOperationException;
 import org.jlinalg.JLinAlgTypeProperties;
-import org.jlinalg.RingElementFactory;
 import org.jlinalg.complex.Complex;
-import org.jlinalg.doublewrapper.DoubleWrapper;
 
 /**
  * This class represents a rational number with a numerator and a denominator as
@@ -40,7 +35,8 @@ import org.jlinalg.doublewrapper.DoubleWrapper;
  */
 @JLinAlgTypeProperties(isExact = true, isDiscreet = false)
 public class Rational
-		extends FieldElement<Rational>
+		extends
+		FieldElement<Rational>
 {
 	/**
 	 * for serialisation.
@@ -136,7 +132,7 @@ public class Rational
 			value = Math.abs(value);
 		}
 
-		String strValue = (new Double(value)).toString();
+		String strValue = (Double.valueOf(value)).toString();
 
 		int preDotDigits = strValue.indexOf(".");
 
@@ -156,15 +152,14 @@ public class Rational
 		BigInteger newNumerator2 = new BigInteger(postDotString);
 		BigInteger newDenominator = BigInteger.TEN.pow(postDotString.length());
 
-		Rational tmp = ((new Rational(newNumerator)).add(new Rational(
-				newNumerator2, newDenominator)));
+		Rational tmp = ((new Rational(newNumerator))
+				.add(new Rational(newNumerator2, newDenominator)));
 		if (exp > 0) {
 			tmp = tmp.multiply(new Rational(BigInteger.TEN.pow(exp)));
 		}
 		else {
-			if (exp < 0)
-				tmp = tmp.multiply(new Rational(BigInteger.ONE, BigInteger.TEN
-						.pow(-exp)));
+			if (exp < 0) tmp = tmp.multiply(
+					new Rational(BigInteger.ONE, BigInteger.TEN.pow(-exp)));
 		}
 
 		BigInteger numerator = tmp.getNumerator();
@@ -244,10 +239,10 @@ public class Rational
 	{
 		BigInteger d1 = this.numerator.gcd(factor.getDenominator());
 		BigInteger d2 = this.denominator.gcd(factor.getNumerator());
-		BigInteger newNumerator = this.numerator.divide(d1).multiply(
-				factor.getNumerator().divide(d2));
-		BigInteger newDenominator = this.denominator.divide(d2).multiply(
-				factor.getDenominator().divide(d1));
+		BigInteger newNumerator = this.numerator.divide(d1)
+				.multiply(factor.getNumerator().divide(d2));
+		BigInteger newDenominator = this.denominator.divide(d2)
+				.multiply(factor.getDenominator().divide(d1));
 		Rational tmp = FACTORY.get(newNumerator, newDenominator, false);
 		return tmp;
 	}
@@ -323,8 +318,8 @@ public class Rational
 			return this.equals(comp.getReal());
 		}
 		Rational comp = (Rational) obj;
-		return (this.numerator.equals(comp.getNumerator()) && this.denominator
-				.equals(comp.getDenominator()));
+		return (this.numerator.equals(comp.getNumerator())
+				&& this.denominator.equals(comp.getDenominator()));
 	}
 
 	@Override
@@ -373,302 +368,26 @@ public class Rational
 	/**
 	 * The constant for the value 0.
 	 */
-	private final static Rational ZERO = new Rational(BigInteger.ZERO);
+	final static Rational ZERO = new Rational(BigInteger.ZERO);
 
 	/**
 	 * The constant for the value -1.
 	 */
-	private final static Rational M_ONE = new Rational(BigInteger.ONE.negate());
+	final static Rational M_ONE = new Rational(BigInteger.ONE.negate());
 
 	/**
 	 * The constant for the value 1.
 	 */
-	private final static Rational ONE = new Rational(BigInteger.ONE);
+	final static Rational ONE = new Rational(BigInteger.ONE);
 
 	/**
 	 * used in {@link RationalFactory#get(Object)}
 	 */
-	private final static BigInteger bigIntMOne = new BigInteger("-1");
+	final static BigInteger bigIntMOne = new BigInteger("-1");
 
 	/**
 	 * The default factory for this type.
 	 */
-	public final static RationalFactory FACTORY = ZERO.new RationalFactory();
-
-	/**
-	 * The factory for Rationals
-	 * 
-	 * @author Georg Thimm
-	 */
-	@JLinAlgTypeProperties(isExact = true)
-	public class RationalFactory
-			extends RingElementFactory<Rational>
-	{
-
-		private static final long serialVersionUID = 1L;
-
-		/**
-		 * this should only be used by {@link Rational} to create a single
-		 * instance.
-		 */
-		private RationalFactory()
-		{
-			super();
-		}
-
-		@Override
-		public Rational[] getArray(int size)
-		{
-			return new Rational[size];
-		}
-
-		/**
-		 * @return the singleton factory for rational numbers.
-		 */
-		public RationalFactory getFactory()
-		{
-			return FACTORY;
-		}
-
-		/**
-		 * Translate other objects into rationals. Objects in the following
-		 * classes are permissible:
-		 * <UL>
-		 * <li> {@link Double}
-		 * <li> {@link Integer}
-		 * <li> {@link BigInteger}
-		 * <li> {@link Rational}
-		 * <li> {@link String} in the form of integers, exponential or fractional
-		 * representation.
-		 * </UL>
-		 * If the argument is a rational, it is returned.
-		 * 
-		 * @exception InvalidOperationException
-		 *                if the object is a String in an unknown format.
-		 */
-		@Override
-		public Rational get(Object o)
-		{
-			if (o instanceof Double) {
-				return get(((Double) o).doubleValue());
-			}
-			if (o instanceof DoubleWrapper) {
-				return get(((DoubleWrapper) o).doubleValue());
-			}
-			if (o instanceof Integer) {
-				return get(((Integer) o).intValue());
-			}
-			if (o instanceof BigInteger) {
-				if (BigInteger.ONE.equals(o)) {
-					return ONE;
-				}
-				if (BigInteger.ZERO.equals(o)) {
-					return ZERO;
-				}
-				if (bigIntMOne.equals(o)) {
-					return M_ONE;
-				}
-				return new Rational((BigInteger) o);
-			}
-			if (o instanceof String) {
-				try {
-					String number = (String) o;
-					Matcher m = expPattern.matcher(number);
-					BigInteger numerator;
-					BigInteger denominator;
-					if (m.matches()) {
-						;
-						// parse exponential writing.
-						int offset = m.group(2).length();
-						int power = 0;
-						if (m.group(3) != null)
-							power = Integer.parseInt(m.group(4)) - offset;
-						BigInteger mantissa = new BigInteger(m.group(1).concat(
-								m.group(2)));
-						if (power > 0) {
-							// exponent is positive
-							numerator = mantissa.multiply(BigInteger.TEN
-									.pow(power));
-							denominator = BigInteger.ONE;
-							return get(numerator, denominator, false);
-						}
-						// exponent is negative.
-						numerator = mantissa;
-						denominator = BigInteger.TEN.pow(-power);
-						return get(numerator, denominator, true);
-
-					}
-					// consider fractional notation
-					m = fracPattern.matcher(number);
-					if (m.matches()) {
-						numerator = new BigInteger(m.group(1));
-						denominator = new BigInteger(m.group(2));
-						return get(numerator, denominator, true);
-					}
-					// at last, try whether this is a plain integer
-					BigInteger i = new BigInteger(number);
-					numerator = i;
-					denominator = BigInteger.ONE;
-				} catch (NumberFormatException e) {
-					throw new InvalidOperationException(
-							o
-									+ " does not represent a rational number (exception was: "
-									+ e.getMessage() + ")");
-				}
-			}
-			// the dummy-case...
-			if (o instanceof Rational) {
-				return (Rational) o;
-			}
-			// and the last-resort try
-			return get(o.toString());
-		}
-
-		/**
-		 * Returns the zero element for this field.
-		 * 
-		 * @return zero
-		 */
-		@Override
-		public Rational zero()
-		{
-			return ZERO;
-		}
-
-		/**
-		 * Returns the one element for this field: 1/1
-		 * 
-		 * @return one
-		 */
-		@Override
-		public Rational one()
-		{
-			return ONE;
-		}
-
-		/**
-		 * Returns the minus one for this field: -1/1
-		 */
-		@Override
-		public Rational m_one()
-		{
-			return M_ONE;
-		}
-
-		/**
-		 * create rationals from integers.
-		 */
-		@Override
-		public Rational get(int i)
-		{
-			if (i == 0) return ZERO;
-			if (i == 1) return ONE;
-			if (i == -1) return M_ONE;
-			return new Rational(i);
-		}
-
-		@Override
-		public Rational get(double d)
-		{
-			if (d == 0) return ZERO;
-			if (d == 1.0) return ONE;
-			if (d == -1.0) return M_ONE;
-			return new Rational(d);
-		}
-
-		@Override
-		public Rational[][] getArray(int rows, int columns)
-		{
-			return new Rational[rows][columns];
-		}
-
-		@SuppressWarnings("deprecation")
-		@Override
-		@Deprecated
-		public Rational gaussianRandomValue(
-				@SuppressWarnings("unused") Random random)
-		{
-			return gaussianRandomValue();
-		}
-
-		@SuppressWarnings("deprecation")
-		@Deprecated
-		@Override
-		public Rational randomValue(@SuppressWarnings("unused") Random random)
-		{
-			return randomValue();
-		}
-
-		@Override
-		public Rational get(long i)
-		{
-			if (i == 0) return ZERO;
-			if (i == 1) return ONE;
-			if (i == -1) return M_ONE;
-			return new Rational(i);
-		}
-
-		/**
-		 * @param n
-		 * @param d
-		 * @return a rational with value (n/d)
-		 * @see org.jlinalg.IRingElementFactory#get(long)
-		 */
-		public Rational get(long n, long d)
-		{
-			if (n == 0) return ZERO;
-			if (n == 1 && d == 1) return ONE;
-			if (n == -1 && d == 1) return M_ONE;
-			return new Rational(n, d);
-		}
-
-		/**
-		 * @param n
-		 *            the nomiator
-		 * @param d
-		 *            the denominator
-		 * @param b
-		 *            if true, cancel the fraction
-		 * @return a rational number
-		 */
-		public Rational get(BigInteger n, BigInteger d, boolean b)
-		{
-			if (n.equals(BigInteger.ZERO)) return ZERO;
-			if (n.equals(BigInteger.ONE) && d.equals(BigInteger.ONE))
-				return ONE;
-			if (n.equals(BigInteger.ONE) && d.equals(bigIntMOne)) return M_ONE;
-			return new Rational(n, d, b);
-		}
-
-		@SuppressWarnings("deprecation")
-		@Override
-		@Deprecated
-		public Rational randomValue(@SuppressWarnings("unused") Random random,
-				Rational min, Rational max)
-		{
-			return randomValue(min, max);
-		}
-
-		/**
-		 * @see org.jlinalg.IRingElementFactory#gaussianRandomValue()
-		 */
-		@Override
-		public Rational gaussianRandomValue()
-		{
-			return get(random.nextGaussian());
-		}
-
-		@Override
-		public Rational randomValue(Rational min, Rational max)
-		{
-			return get(randomValue().multiply(max.subtract(min))).add(min);
-		}
-
-		@Override
-		public Rational randomValue()
-		{
-			return get(random.nextDouble());
-		}
-	}
+	public final static RationalFactory FACTORY = new RationalFactory();
 
 }
