@@ -24,6 +24,7 @@ import java.util.Random;
 import org.jlinalg.LinAlgFactory;
 import org.jlinalg.Vector;
 import org.jlinalg.doublewrapper.DoubleWrapper;
+import org.jlinalg.rational.RationalFactory;
 import org.junit.Test;
 
 /**
@@ -52,8 +53,8 @@ public class FastRationalBlackBoxTest
 			FastRational r1 = rFac.get(a, b);
 			FastRational r2 = rFac.get(c, d);
 			FastRational vv = r1.divide(r2);
-			assertTrue("denominator negative: " + vv.getDenominator(), vv
-					.getDenominator() > 0);
+			assertTrue("denominator negative: " + vv.getDenominator(),
+					vv.getDenominator() > 0);
 			double v = ((double) a / b) / ((double) c / d);
 			assertEquals(v, vv.doubleValue(), 0.0001);
 		}
@@ -66,12 +67,14 @@ public class FastRationalBlackBoxTest
 	public void invert()
 	{
 		for (int i = 0; i < 200; i++) {
-			int a = (int) (Math.random() * Integer.MAX_VALUE - Integer.MAX_VALUE / 2);
-			int b = (int) (Math.random() * Integer.MAX_VALUE - Integer.MAX_VALUE / 2);
+			int a = (int) (Math.random() * Integer.MAX_VALUE
+					- Integer.MAX_VALUE / 2);
+			int b = (int) (Math.random() * Integer.MAX_VALUE
+					- Integer.MAX_VALUE / 2);
 			FastRational r1 = rFac.get(a, b);
 			FastRational r2 = r1.invert();
-			assertTrue("1/(1/" + r1 + "))!=" + r2.invert(), r2.invert().equals(
-					r1));
+			assertTrue("1/(1/" + r1 + "))!=" + r2.invert(),
+					r2.invert().equals(r1));
 		}
 
 		for (int k = 0; k < 200; k++) {
@@ -80,12 +83,12 @@ public class FastRationalBlackBoxTest
 			if (b == 0) b = 123;
 			if (a == 0) a = 777;
 			FastRational r1 = rFac.get(a, b);
-			assertTrue("denominator negative: " + r1.getDenominator(), r1
-					.getDenominator() > 0);
+			assertTrue("denominator negative: " + r1.getDenominator(),
+					r1.getDenominator() > 0);
 
 			FastRational vv = r1.invert();
-			assertTrue("denominator negative: " + vv.getDenominator(), vv
-					.getDenominator() > 0);
+			assertTrue("denominator negative: " + vv.getDenominator(),
+					vv.getDenominator() > 0);
 			double v = ((double) b / a);
 			assertEquals(v, vv.doubleValue(), 0.0001);
 		}
@@ -108,8 +111,8 @@ public class FastRationalBlackBoxTest
 			FastRational r1 = rFac.get(a, b);
 			FastRational r2 = rFac.get(c, d);
 			FastRational vv = r1.subtract(r2);
-			assertTrue("denominator negative: " + vv.getDenominator(), vv
-					.getDenominator() > 0);
+			assertTrue("denominator negative: " + vv.getDenominator(),
+					vv.getDenominator() > 0);
 			double v = (double) a / b - (double) c / d;
 			assertEquals(v, vv.doubleValue(), 0.0001);
 		}
@@ -131,8 +134,8 @@ public class FastRationalBlackBoxTest
 			FastRational r1 = rFac.get(a, b);
 			FastRational r2 = rFac.get(c, d);
 			FastRational vv = r1.add(r2);
-			assertTrue("denominator negative: " + vv.getDenominator(), vv
-					.getDenominator() > 0);
+			assertTrue("denominator negative: " + vv.getDenominator(),
+					vv.getDenominator() > 0);
 			double v = ((double) a / b) + ((double) c / d);
 			assertEquals(v, vv.doubleValue(), 0.0001);
 		}
@@ -155,13 +158,15 @@ public class FastRationalBlackBoxTest
 			if (d == 0) d = 221;
 			FastRational r1 = rFac.get(a, b);
 			FastRational r2 = rFac.get(c, d);
-			Double d1 = new Double((double) a / b);
+			Double d1 = Double.valueOf((double) a / b);
 			if (d1.doubleValue() == -0.0) d1 = Double.valueOf(0.0);
-			Double d2 = new Double((double) c / d);
+			Double d2 = Double.valueOf((double) c / d);
 			if (d2.doubleValue() == -0.0) d2 = Double.valueOf(0.0);
-			assertTrue(r1 + ".compareTo(" + r2 + ")==" + r1.compareTo(r2)
-					+ " but " + d1 + ".compareTo(" + d2 + ")=="
-					+ d1.compareTo(d2), r1.compareTo(r2) == d1.compareTo(d2));
+			assertTrue(
+					r1 + ".compareTo(" + r2 + ")==" + r1.compareTo(r2) + " but "
+							+ d1 + ".compareTo(" + d2 + ")=="
+							+ d1.compareTo(d2),
+					r1.compareTo(r2) == d1.compareTo(d2));
 		}
 	}
 
@@ -172,8 +177,10 @@ public class FastRationalBlackBoxTest
 	public final void testDoubleValue()
 	{
 		for (int i = 0; i < 100; i++) {
-			int a = (int) (Math.random() * Integer.MAX_VALUE - Integer.MAX_VALUE / 2);
-			int b = (int) (Math.random() * Integer.MAX_VALUE - Integer.MAX_VALUE / 2);
+			int a = (int) (Math.random() * Integer.MAX_VALUE
+					- Integer.MAX_VALUE / 2);
+			int b = (int) (Math.random() * Integer.MAX_VALUE
+					- Integer.MAX_VALUE / 2);
 			FastRational r = rFac.get(a, b);
 			// assertTrue(r.doubleValue() + "!=" + ((double) a / (double) b),
 			// Math
@@ -191,8 +198,10 @@ public class FastRationalBlackBoxTest
 	{
 
 		for (int i = 0; i < 100; i++) {
-			int a = (int) (Math.random() * Integer.MAX_VALUE - Integer.MAX_VALUE / 2);
-			int b = (int) (Math.random() * Integer.MAX_VALUE - Integer.MAX_VALUE / 2);
+			int a = (int) (Math.random() * Integer.MAX_VALUE
+					- Integer.MAX_VALUE / 2);
+			int b = (int) (Math.random() * Integer.MAX_VALUE
+					- Integer.MAX_VALUE / 2);
 			FastRational r1 = rFac.get(a, b);
 			FastRational r2 = rFac.get(a, b);
 			assertTrue(r1 + "!=" + r2, r2.equals(r1));
@@ -208,9 +217,9 @@ public class FastRationalBlackBoxTest
 		FastRational r1 = FastRational.FACTORY.one();
 		for (int i = 0; i < 1000; i++) {
 			{
-				FastRational r2 = FastRational.FACTORY
-						.get(random.nextInt(10000) - 5000, random
-								.nextInt(10000) + 1, true);
+				FastRational r2 = FastRational.FACTORY.get(
+						random.nextInt(10000) - 5000, random.nextInt(10000) + 1,
+						true);
 				if (r1.doubleValue() <= r2.doubleValue()) {
 					assertTrue("r2=" + r2 + " r1=" + r1, r1.le(r2));
 					assertTrue("r2=" + r2 + " r1=" + r1, r2.ge(r1));
@@ -231,17 +240,22 @@ public class FastRationalBlackBoxTest
 	public final void testMultiply()
 	{
 		for (int i = 0; i < 100; i++) {
-			int a = (int) (Math.random() * Integer.MAX_VALUE - Integer.MAX_VALUE / 2);
-			int b = (int) (Math.random() * Integer.MAX_VALUE - Integer.MAX_VALUE / 2);
-			int c = (int) (Math.random() * Integer.MAX_VALUE - Integer.MAX_VALUE / 2);
-			int d = (int) (Math.random() * Integer.MAX_VALUE - Integer.MAX_VALUE / 2);
+			int a = (int) (Math.random() * Integer.MAX_VALUE
+					- Integer.MAX_VALUE / 2);
+			int b = (int) (Math.random() * Integer.MAX_VALUE
+					- Integer.MAX_VALUE / 2);
+			int c = (int) (Math.random() * Integer.MAX_VALUE
+					- Integer.MAX_VALUE / 2);
+			int d = (int) (Math.random() * Integer.MAX_VALUE
+					- Integer.MAX_VALUE / 2);
 			FastRational r1 = rFac.get(a, b);
 			r1 = r1.multiply(rFac.get(c, d));
 			FastRational r2 = rFac.get(a, d);
 			r2 = r2.multiply(rFac.get(c, b));
-			assertTrue(a + "/" + b + "*" + c + "/" + d + "!=" + a + "/" + d
-					+ "*" + c + "/" + b + "    " + r1 + "!=" + r2, r1
-					.equals(r2));
+			assertTrue(
+					a + "/" + b + "*" + c + "/" + d + "!=" + a + "/" + d + "*"
+							+ c + "/" + b + "    " + r1 + "!=" + r2,
+					r1.equals(r2));
 		}
 
 		for (int k = 0; k < 100; k++) {
@@ -254,8 +268,8 @@ public class FastRationalBlackBoxTest
 			FastRational r1 = rFac.get(a, b);
 			FastRational r2 = rFac.get(c, d);
 			FastRational vv = r1.multiply(r2);
-			assertTrue("denominator negative: " + vv.getDenominator(), vv
-					.getDenominator() > 0);
+			assertTrue("denominator negative: " + vv.getDenominator(),
+					vv.getDenominator() > 0);
 			double v = ((double) a / b) * ((double) c / d);
 			assertEquals(v, vv.doubleValue(), 0.0001);
 		}
@@ -281,8 +295,10 @@ public class FastRationalBlackBoxTest
 	public final void testNegate()
 	{
 		for (int i = 0; i < 100; i++) {
-			int a = (int) (Math.random() * Integer.MAX_VALUE - Integer.MAX_VALUE / 2);
-			int b = (int) (Math.random() * Integer.MAX_VALUE - Integer.MAX_VALUE / 2);
+			int a = (int) (Math.random() * Integer.MAX_VALUE
+					- Integer.MAX_VALUE / 2);
+			int b = (int) (Math.random() * Integer.MAX_VALUE
+					- Integer.MAX_VALUE / 2);
 			FastRational r1 = rFac.get(a, b);
 			FastRational r2 = r1.negate();
 			assertEquals("-(-" + r2 + ")!=" + r1.negate(), r1, r2.negate());
@@ -314,7 +330,7 @@ public class FastRationalBlackBoxTest
 	{
 		FastRationalFactory rationalFac = FastRational.FACTORY;
 
-		LinAlgFactory<DoubleWrapper> doubleFac = new LinAlgFactory<DoubleWrapper>(
+		LinAlgFactory<DoubleWrapper> doubleFac = new LinAlgFactory<>(
 				DoubleWrapper.FACTORY);
 
 		// for a vector
@@ -323,8 +339,8 @@ public class FastRationalBlackBoxTest
 		for (int row = 1; row <= vRational.length(); row++) {
 			DoubleWrapper d = vDouble.getEntry(row);
 			FastRational r = vRational.getEntry(row);
-			assertEquals(d + "!=" + r + "(=" + r.doubleValue() + ")", d
-					.doubleValue(), r.doubleValue(),
+			assertEquals(d + "!=" + r + "(=" + r.doubleValue() + ")",
+					d.doubleValue(), r.doubleValue(),
 					(d.abs()).doubleValue() / 1000);
 		}
 	}
