@@ -26,7 +26,6 @@ import org.jlinalg.Matrix;
 import org.jlinalg.Vector;
 import org.jlinalg.doublewrapper.DoubleWrapper;
 import org.jlinalg.doublewrapper.DoubleWrapper.DoubleWrapperFactory;
-import org.jlinalg.rational.Rational.RationalFactory;
 import org.jlinalg.testutil.RandomNumberList;
 import org.junit.Test;
 
@@ -54,12 +53,12 @@ public class RationalBlackBoxTest
 			Rational r1 = rFac.get(a, b);
 			Rational r2 = rFac.get(c, d);
 			Rational vv = r1.divide(r2);
-			assertTrue("denominator negative: " + vv.getDenominator(), vv
-					.getDenominator().longValue() > 0);
+			assertTrue("denominator negative: " + vv.getDenominator(),
+					vv.getDenominator().longValue() > 0);
 			double v = ((double) a / b) / ((double) c / d);
-			assertTrue(r1 + "/" + r2 + "!=" + v, Math.abs(vv.getNumerator()
-					.doubleValue()
-					/ vv.getDenominator().doubleValue() - v) < 0.0001);
+			assertTrue(r1 + "/" + r2 + "!=" + v,
+					Math.abs(vv.getNumerator().doubleValue()
+							/ vv.getDenominator().doubleValue() - v) < 0.0001);
 		}
 	}
 
@@ -70,12 +69,14 @@ public class RationalBlackBoxTest
 	public void invert()
 	{
 		for (int i = 0; i < 200; i++) {
-			int a = (int) (Math.random() * Integer.MAX_VALUE - Integer.MAX_VALUE / 2);
-			int b = (int) (Math.random() * Integer.MAX_VALUE - Integer.MAX_VALUE / 2);
+			int a = (int) (Math.random() * Integer.MAX_VALUE
+					- Integer.MAX_VALUE / 2);
+			int b = (int) (Math.random() * Integer.MAX_VALUE
+					- Integer.MAX_VALUE / 2);
 			Rational r1 = rFac.get(a, b);
 			Rational r2 = r1.invert();
-			assertTrue("1/(1/" + r1 + "))!=" + r2.invert(), r2.invert().equals(
-					r1));
+			assertTrue("1/(1/" + r1 + "))!=" + r2.invert(),
+					r2.invert().equals(r1));
 		}
 
 		for (int k = 0; k < 200; k++) {
@@ -84,16 +85,16 @@ public class RationalBlackBoxTest
 			if (b == 0) b = 123;
 			if (a == 0) a = 777;
 			Rational r1 = rFac.get(a, b);
-			assertTrue("denominator negative: " + r1.getDenominator(), r1
-					.getDenominator().longValue() > 0);
+			assertTrue("denominator negative: " + r1.getDenominator(),
+					r1.getDenominator().longValue() > 0);
 
 			Rational vv = r1.invert();
-			assertTrue("denominator negative: " + vv.getDenominator(), vv
-					.getDenominator().longValue() > 0);
+			assertTrue("denominator negative: " + vv.getDenominator(),
+					vv.getDenominator().longValue() > 0);
 			double v = ((double) b / a);
-			assertTrue("1/(" + r1 + ")!=" + v, Math.abs(vv.getNumerator()
-					.doubleValue()
-					/ vv.getDenominator().doubleValue() - v) < 0.0001);
+			assertTrue("1/(" + r1 + ")!=" + v,
+					Math.abs(vv.getNumerator().doubleValue()
+							/ vv.getDenominator().doubleValue() - v) < 0.0001);
 		}
 	}
 
@@ -114,12 +115,12 @@ public class RationalBlackBoxTest
 			Rational r1 = rFac.get(a, b);
 			Rational r2 = rFac.get(c, d);
 			Rational vv = r1.subtract(r2);
-			assertTrue("denominator negative: " + vv.getDenominator(), vv
-					.getDenominator().longValue() > 0);
+			assertTrue("denominator negative: " + vv.getDenominator(),
+					vv.getDenominator().longValue() > 0);
 			double v = (double) a / b - (double) c / d;
-			assertTrue(r1 + "-" + r2 + "!=" + v, Math.abs(vv.getNumerator()
-					.doubleValue()
-					/ vv.getDenominator().doubleValue() - v) < 0.0001);
+			assertTrue(r1 + "-" + r2 + "!=" + v,
+					Math.abs(vv.getNumerator().doubleValue()
+							/ vv.getDenominator().doubleValue() - v) < 0.0001);
 		}
 	}
 
@@ -139,12 +140,12 @@ public class RationalBlackBoxTest
 			Rational r1 = rFac.get(a, b);
 			Rational r2 = rFac.get(c, d);
 			Rational vv = r1.add(r2);
-			assertTrue("denominator negative: " + vv.getDenominator(), vv
-					.getDenominator().longValue() > 0);
+			assertTrue("denominator negative: " + vv.getDenominator(),
+					vv.getDenominator().longValue() > 0);
 			double v = ((double) a / b) + ((double) c / d);
-			assertTrue(r1 + "+" + r2 + "!=" + v, Math.abs(vv.getNumerator()
-					.doubleValue()
-					/ vv.getDenominator().doubleValue() - v) < 0.0001);
+			assertTrue(r1 + "+" + r2 + "!=" + v,
+					Math.abs(vv.getNumerator().doubleValue()
+							/ vv.getDenominator().doubleValue() - v) < 0.0001);
 		}
 	}
 
@@ -205,13 +206,15 @@ public class RationalBlackBoxTest
 			if (d == 0) d = 221;
 			Rational r1 = rFac.get(a, b);
 			Rational r2 = rFac.get(c, d);
-			Double d1 = new Double((double) a / b);
+			Double d1 = Double.valueOf((double) a / b);
 			if (d1.doubleValue() == -0.0) d1 = Double.valueOf(0.0);
-			Double d2 = new Double((double) c / d);
+			Double d2 = Double.valueOf((double) c / d);
 			if (d2.doubleValue() == -0.0) d2 = Double.valueOf(0.0);
-			assertTrue(r1 + ".compareTo(" + r2 + ")==" + r1.compareTo(r2)
-					+ " but " + d1 + ".compareTo(" + d2 + ")=="
-					+ d1.compareTo(d2), r1.compareTo(r2) == d1.compareTo(d2));
+			assertTrue(
+					r1 + ".compareTo(" + r2 + ")==" + r1.compareTo(r2) + " but "
+							+ d1 + ".compareTo(" + d2 + ")=="
+							+ d1.compareTo(d2),
+					r1.compareTo(r2) == d1.compareTo(d2));
 		}
 	}
 
@@ -222,12 +225,14 @@ public class RationalBlackBoxTest
 	public final void testDoubleValue()
 	{
 		for (int i = 0; i < 100; i++) {
-			int a = (int) (Math.random() * Integer.MAX_VALUE - Integer.MAX_VALUE / 2);
-			int b = (int) (Math.random() * Integer.MAX_VALUE - Integer.MAX_VALUE / 2);
+			int a = (int) (Math.random() * Integer.MAX_VALUE
+					- Integer.MAX_VALUE / 2);
+			int b = (int) (Math.random() * Integer.MAX_VALUE
+					- Integer.MAX_VALUE / 2);
 			Rational r = rFac.get(a, b);
-			assertTrue(r.doubleValue() + "!=" + ((double) a / (double) b), Math
-					.abs(r.doubleValue() - (double) a / (double) b) < Math
-					.abs(0.000001 * a / b));
+			assertTrue(r.doubleValue() + "!=" + ((double) a / (double) b),
+					Math.abs(r.doubleValue() - (double) a / (double) b) < Math
+							.abs(0.000001 * a / b));
 		}
 	}
 
@@ -239,8 +244,10 @@ public class RationalBlackBoxTest
 	{
 
 		for (int i = 0; i < 100; i++) {
-			int a = (int) (Math.random() * Integer.MAX_VALUE - Integer.MAX_VALUE / 2);
-			int b = (int) (Math.random() * Integer.MAX_VALUE - Integer.MAX_VALUE / 2);
+			int a = (int) (Math.random() * Integer.MAX_VALUE
+					- Integer.MAX_VALUE / 2);
+			int b = (int) (Math.random() * Integer.MAX_VALUE
+					- Integer.MAX_VALUE / 2);
 			Rational r1 = rFac.get(a, b);
 			Rational r2 = rFac.get(a, b);
 			assertTrue(r1 + "!=" + r2, r2.equals(r1));
@@ -253,8 +260,8 @@ public class RationalBlackBoxTest
 	@Test
 	public void testLeGe()
 	{
-		for (Rational r1 : new RandomNumberList<Rational>(rFac, 10)) {
-			for (Rational r2 : new RandomNumberList<Rational>(rFac, 10)) {
+		for (Rational r1 : new RandomNumberList<>(rFac, 10)) {
+			for (Rational r2 : new RandomNumberList<>(rFac, 10)) {
 				if (r1.doubleValue() <= r2.doubleValue()) {
 					assertTrue(r1.le(r2));
 					assertTrue(r2.ge(r1));
@@ -274,17 +281,22 @@ public class RationalBlackBoxTest
 	public final void testMultiply()
 	{
 		for (int i = 0; i < 100; i++) {
-			int a = (int) (Math.random() * Integer.MAX_VALUE - Integer.MAX_VALUE / 2);
-			int b = (int) (Math.random() * Integer.MAX_VALUE - Integer.MAX_VALUE / 2);
-			int c = (int) (Math.random() * Integer.MAX_VALUE - Integer.MAX_VALUE / 2);
-			int d = (int) (Math.random() * Integer.MAX_VALUE - Integer.MAX_VALUE / 2);
+			int a = (int) (Math.random() * Integer.MAX_VALUE
+					- Integer.MAX_VALUE / 2);
+			int b = (int) (Math.random() * Integer.MAX_VALUE
+					- Integer.MAX_VALUE / 2);
+			int c = (int) (Math.random() * Integer.MAX_VALUE
+					- Integer.MAX_VALUE / 2);
+			int d = (int) (Math.random() * Integer.MAX_VALUE
+					- Integer.MAX_VALUE / 2);
 			Rational r1 = rFac.get(a, b);
 			r1 = r1.multiply(rFac.get(c, d));
 			Rational r2 = rFac.get(a, d);
 			r2 = r2.multiply(rFac.get(c, b));
-			assertTrue(a + "/" + b + "*" + c + "/" + d + "!=" + a + "/" + d
-					+ "*" + c + "/" + b + "    " + r1 + "!=" + r2, r1
-					.equals(r2));
+			assertTrue(
+					a + "/" + b + "*" + c + "/" + d + "!=" + a + "/" + d + "*"
+							+ c + "/" + b + "    " + r1 + "!=" + r2,
+					r1.equals(r2));
 		}
 
 		for (int k = 0; k < 100; k++) {
@@ -297,12 +309,12 @@ public class RationalBlackBoxTest
 			Rational r1 = rFac.get(a, b);
 			Rational r2 = rFac.get(c, d);
 			Rational vv = r1.multiply(r2);
-			assertTrue("denominator negative: " + vv.getDenominator(), vv
-					.getDenominator().longValue() > 0);
+			assertTrue("denominator negative: " + vv.getDenominator(),
+					vv.getDenominator().longValue() > 0);
 			double v = ((double) a / b) * ((double) c / d);
-			assertTrue(r1 + "*" + r2 + "!=" + v, Math.abs(vv.getNumerator()
-					.doubleValue()
-					/ vv.getDenominator().doubleValue() - v) < 0.0001);
+			assertTrue(r1 + "*" + r2 + "!=" + v,
+					Math.abs(vv.getNumerator().doubleValue()
+							/ vv.getDenominator().doubleValue() - v) < 0.0001);
 		}
 	}
 
@@ -315,10 +327,10 @@ public class RationalBlackBoxTest
 		for (int i = 0; i < 100; i++) {
 			double d = (0.5 - Math.random()) * 11111111111.0;
 			Rational r = rFac.get(d);
-			assertTrue(r + "=" + r.doubleValue() + "!=" + d, Math.abs(r
-					.getNumerator().doubleValue()
-					/ r.getDenominator().doubleValue() - d) < 0.000001 * Math
-					.abs(d));
+			assertTrue(r + "=" + r.doubleValue() + "!=" + d,
+					Math.abs(r.getNumerator().doubleValue()
+							/ r.getDenominator().doubleValue() - d) < 0.000001
+									* Math.abs(d));
 		}
 	}
 
@@ -329,8 +341,10 @@ public class RationalBlackBoxTest
 	public final void testNegate()
 	{
 		for (int i = 0; i < 100; i++) {
-			int a = (int) (Math.random() * Integer.MAX_VALUE - Integer.MAX_VALUE / 2);
-			int b = (int) (Math.random() * Integer.MAX_VALUE - Integer.MAX_VALUE / 2);
+			int a = (int) (Math.random() * Integer.MAX_VALUE
+					- Integer.MAX_VALUE / 2);
+			int b = (int) (Math.random() * Integer.MAX_VALUE
+					- Integer.MAX_VALUE / 2);
 			Rational r1 = rFac.get(a, b);
 			Rational r2 = r1.negate();
 			assertEquals("-(-" + r2 + ")!=" + r1.negate(), r1, r2.negate());
@@ -346,7 +360,7 @@ public class RationalBlackBoxTest
 	{
 		DoubleWrapperFactory fac = DoubleWrapper.FACTORY;
 
-		LinAlgFactory<Rational> rfac = new LinAlgFactory<Rational>(
+		LinAlgFactory<Rational> rfac = new LinAlgFactory<>(
 				Rational.FACTORY);
 
 		// for a vector
@@ -368,13 +382,13 @@ public class RationalBlackBoxTest
 	public void doubleToRationalWrapper() throws Exception
 	{
 		RationalFactory fac = Rational.FACTORY;
-		for (DoubleWrapper d : new RandomNumberList<DoubleWrapper>(
+		for (DoubleWrapper d : new RandomNumberList<>(
 				DoubleWrapper.FACTORY, 20))
 		{
 			Rational r = fac.get(d);
-			assertTrue(d + "!=" + r + "(=" + r.doubleValue() + ")", Math.abs(d
-					.doubleValue()
-					- r.doubleValue()) <= (d.abs()).doubleValue() / 1000);
+			assertTrue(d + "!=" + r + "(=" + r.doubleValue() + ")",
+					Math.abs(d.doubleValue() - r.doubleValue()) <= (d.abs())
+							.doubleValue() / 1000);
 		}
 	}
 
@@ -388,7 +402,7 @@ public class RationalBlackBoxTest
 	{
 		RationalFactory fac = Rational.FACTORY;
 
-		LinAlgFactory<DoubleWrapper> rfac = new LinAlgFactory<DoubleWrapper>(
+		LinAlgFactory<DoubleWrapper> rfac = new LinAlgFactory<>(
 				DoubleWrapper.FACTORY);
 
 		// for a matrix
@@ -398,9 +412,9 @@ public class RationalBlackBoxTest
 			for (int col = 1; col <= mRational.getCols(); col++) {
 				DoubleWrapper d = mDouble.get(row, col);
 				Rational r = mRational.get(row, col);
-				assertTrue(d + "!=" + r + "(=" + r.doubleValue() + ")", Math
-						.abs(d.doubleValue() - r.doubleValue()) <= (d.abs())
-						.doubleValue() / 1000);
+				assertTrue(d + "!=" + r + "(=" + r.doubleValue() + ")",
+						Math.abs(d.doubleValue() - r.doubleValue()) <= (d.abs())
+								.doubleValue() / 1000);
 			}
 		}
 	}
@@ -414,7 +428,7 @@ public class RationalBlackBoxTest
 	{
 		RationalFactory rationalFac = Rational.FACTORY;
 
-		LinAlgFactory<DoubleWrapper> doubleFac = new LinAlgFactory<DoubleWrapper>(
+		LinAlgFactory<DoubleWrapper> doubleFac = new LinAlgFactory<>(
 				DoubleWrapper.FACTORY);
 
 		// for a vector
@@ -423,9 +437,9 @@ public class RationalBlackBoxTest
 		for (int row = 1; row <= vRational.length(); row++) {
 			DoubleWrapper d = vDouble.getEntry(row);
 			Rational r = vRational.getEntry(row);
-			assertTrue(d + "!=" + r + "(=" + r.doubleValue() + ")", Math.abs(d
-					.doubleValue()
-					- r.doubleValue()) <= (d.abs()).doubleValue() / 1000);
+			assertTrue(d + "!=" + r + "(=" + r.doubleValue() + ")",
+					Math.abs(d.doubleValue() - r.doubleValue()) <= (d.abs())
+							.doubleValue() / 1000);
 		}
 	}
 
